tests/ui/ferrocene/compiler-arguments/upper_c_panic/upper_c_panic_space-eq-empty.rs
//@ check-fail
//@ compile-flags: -C panic=
//~? ERROR incorrect value

fn main() {}

// ferrocene-annotations: um_rustc_C_panic
